--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
+import PokemonCard from "../components/pokemons/PokemonCard.astro";
+import type { PokemonListResponse } from "../interfaces/pokemon-list-response";
+import MainLayout from "../layouts/MainLayout.astro";
+import "../styles/global.css";
 
+const title  = "Pokémon static | Home";
+const resp = await fetch("https://pokeapi.co/api/v2/pokemon");
+const data = await resp.json() as PokemonListResponse;
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout title={title}>
+	<h1 class="text-3xl text-center">Pokédex</h1>
+	<section class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-5 gap-4 mt-5">
+		{data.results.map((pokemon) => (
+			<PokemonCard name={pokemon.name} url={pokemon.url} />
+		))}
+	</section>
+</MainLayout>
