--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,14 @@
 ---
-const {title} = Astro.props;
+import { ClientRouter } from "astro:transitions";
+import "../styles/global.css";
+import { siteInfo } from "../consts/site-info";
+
+interface Props {
+	title?: string;
+	image?: string;
+	description?: string;
+}
+const {title = siteInfo.title, description = siteInfo.description, image} = Astro.props;
 ---
 
 <html lang="en">
@@ -8,7 +17,16 @@ const {title} = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<!-- Para el SEO -->
+		<meta name="description" content={description} />
+		<meta name="author" content={"Valeria Aristizabal Gómez"} />
+		<!-- meta tags --> 
+		<meta name="og:title" content={title} />
+		<meta name="og:description" content={description} />
+		<meta name="og:image" content={image} />
+
 		<title>{title}</title>
+		<ClientRouter/>
 	</head>
 	<body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
 		<main class="mt-10">
