--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -28,7 +28,7 @@ const {title = siteInfo.title, description = siteInfo.description, image} = Astr
 		<title>{title}</title>
 		<ClientRouter/>
 	</head>
-	<body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
+	<body class="bg-slate-800 text-slate-100 px-3 m-auto max-w-3xl">
 		<main class="mt-10">
 	        <slot/>
 		</main>
